update shell file

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-LKCompiler Compiler
+LKCompiler Compiler (The code is still being refined)
 ====================
 
     This is the LKCompiler,Head-to-head love based on cbc programming language compiler.
