--- a/README
+++ b/README
@@ -57,7 +57,7 @@ Test
    |
    |----test:启动文件
          ｜
-         ｜----example:案例例子测试
+         ｜----example:案例例子测试,文件后缀名为:xxx.l
    ｜
    ｜----bin:启动脚本文件
    ｜
