--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-LKCompiler是一个小型编译器，基于cbc编译器基础参考修改而写的，cbc编译器使用C和java语言混合而写的，LKCompiler使用JavaCC解析器。
+
+LKCompiler是一个小型编译器,LKCompiler使用JavaCC解析器。
 ==============================================================================================================================================================================================================================================
 
     LKCompiler目前只写了环境安装部分，词法语法少量的实现，后期需要很多语法和词法参与进来，欢迎大家点个stared或者fork,作者有动力造个轮子，初心就是写个编译器，打造一个编程语言玩玩。
