--- a/README
+++ b/README
@@ -6,6 +6,10 @@ LKCompiler是一个小型编译器,LKCompiler使用JavaCC解析器。
     如果大家有想法参与贡献，可以加入，但是这个有基础的，具备编译原理基础，如果没有学习编译原理或者很难学习，可以推荐路线图学习
      http://coursegalaxy.com/compilers/learn-design.html
     有基础的话可以了解一下整个架构，从词法设计开始参与进来。
+    ///===----------------------------------------------------------------------------------
+    /// 新增了深度学习模型，为的是大家学习一下这个megcc编译器的支持
+    ///===----------------------------------------------------------------------------------
+    
 -----------------------------------------------------------------------------------------------------------------------
 编译器语法规则：
 // 库函数运用Java的import,函数名用c函数库
